# TODO_FULL_STACK-PROJECT

./: README.md
BACK_END/: .env
BACK_END/dailyDO_todo_app/: .env  pyproject.toml
BACK_END/dailyDO_todo_app/dailydo_todo_app/: main.py  setting.py
